docs(infra): add Service Mesh, OpenTelemetry/SRE, JDK 22-25 + ZGC
microservice-governance.md: Service Mesh & Istio (sidecar, control/data plane, VirtualService/DestinationRule CRDs, Ambient Mode)
monitoring-observability.md: OpenTelemetry deep (W3C TraceContext, Baggage, sampling strategies, Java Agent) + SRE practices (Error Budget, Runbook, blameless postmortem)
java-modern-features.md: JDK 22-25 JEPs (Panama FFM, virtual thread synchronized fix, structured concurrency), G1 vs ZGC vs Generational ZGC selection guide